public/assets/css/style.css
* {border-radius: 0 !important;}
html {box-sizing: border-box;}
body {padding-top: 70px !important; background-color: #f1f1f1 !important;}
body, html { height: 100%;}
.img-circle {
  border-radius: 50% !important;
}
a.dropdown-toggle {padding-top: 0 !important; padding-bottom: 0 !important;}
a.dropdown-toggle img {
  margin-left: 10px !important;
}
.btn-group {
  margin-left: 10px;
}
.added {
  margin-top: 10px;
}
.google-login {
  background-color: #E53935 !important;
  color: #FFFFFF !important;
}
.google-login:hover {background-color: #ee3b37 !important;}
.btn-twitter {
  color: #4099FF !important;
  background: transparent;
  width: 38px !important;
  height: 24px !important;
  border-radius: 1.5px !important;
  vertical-align: top !important;
  margin-left: 5px;
}
.btn-twitter i {
  font-size: 15px;
  margin-top: 0px !important;
}
section {
  min-height: calc(100% - 1px);
}
footer {
  clear: both;
  position: relative;
  z-index: 10;
  height: 3em;
  margin-top: -3em;
}
footer a {
  color: #ededed;
}
footer a:hover {
  text-decoration: none;
  color: #d6d5d5;
}

